fixed image title, and image layout

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lqip-loader": "^2.2.1",
     "mocha": "^10.2.0",
     "mochapack": "^2.1.2",
+    "responsive-loader": "^3.1.2",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
+    "sharp": "^0.33.5",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
