--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "file-loader": "^6.2.0",
     "fontmin-webpack": "^4.0.0",
     "gh-pages": "^6.3.0",
+    "image-minimizer-webpack-plugin": "^4.1.3",
+    "imagemin": "^9.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^8.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
     "lqip-loader": "^2.2.1",
     "mocha": "^10.2.0",
     "mochapack": "^2.1.2",
@@ -25,6 +32,7 @@
     "sass-loader": "^16.0.5",
     "sharp": "^0.33.5",
     "style-loader": "^3.3.4",
+    "svgo": "^3.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
