--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "author": "Ben",
   "license": "Copyright",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "chai": "^4.3.4",
+    "compression-webpack-plugin": "^11.1.0",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^5.2.7",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^7.27.0",
     "file-loader": "^6.2.0",
     "fontmin-webpack": "^4.0.0",
     "gh-pages": "^6.3.0",
+    "html-webpack-plugin": "^5.6.3",
     "image-minimizer-webpack-plugin": "^4.1.3",
     "imagemin": "^9.0.0",
     "imagemin-gifsicle": "^7.0.0",
@@ -25,14 +30,17 @@
     "imagemin-svgo": "^11.0.1",
     "imagemin-webp-webpack-plugin": "^3.3.6",
     "lqip-loader": "^2.2.1",
+    "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^10.2.0",
     "mochapack": "^2.1.2",
+    "postcss-loader": "^8.1.1",
     "responsive-loader": "^3.1.2",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
     "sharp": "^0.33.5",
     "style-loader": "^3.3.4",
     "svgo": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.13",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
