--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^11.0.1",
     "imagemin-webp-webpack-plugin": "^3.3.6",
+    "jimp": "^1.6.0",
+    "jimp-loader": "^0.0.2",
+    "loader-utils": "^3.3.1",
     "lqip-loader": "^2.2.1",
     "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^10.2.0",
     "mochapack": "^2.1.2",
     "postcss-loader": "^8.1.1",
     "responsive-loader": "^3.1.2",
+    "responsive-loader-modern": "^1.3.2",
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
     "sharp": "^0.33.5",
